initial landing page

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let's Fork</title>
+    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <h1>
-        <center>Let's Fork</center>
-    </h1>
-    <center>Available on the App store and Google Play Store</center>
+    <div class="header">
+        <img class="icon" src="./icon.svg" />
+        <div class="header-text">Let's Fork</div>
+    </div>
+    <div class="info">
+        <div>
+            <img class="phone" src="./phone.png" />
+        </div>
+        <div>
+            <div>
+                <a href="">
+                    <img class="apple" src="./app-store.svg" />
+                </a>
+            </div>
+            <div>
+                <a href="https://play.google.com/store/apps/details?id=com.peterzernia.letsfork">
+                    <img class="google" src="./google-play.png" />
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
