add link to app store

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         </div>
         <div>
             <div>
-                <a href="">
+                <a href="https://apps.apple.com/us/app/lets-fork/id1513436174">
                     <img class="apple" src="./app-store.svg" />
                 </a>
             </div>
