--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Let's Fork makes deciding on dinner with friends easy. Swipe right on your next favorite restaurant.">
+    <meta name="keywords" content="letsfork,lets,fork,app,android,iphone,ios,swipe,right,mobile,restaurant,restaurants,dinner,food,friends,party">
+    <meta name="author" content="Peter Zernia">
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://letsfork.app"/>
+
     <title>Let's Fork</title>
     <link rel="stylesheet" type="text/css" href="./index.css">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <div class="header">
-        <img class="icon" src="./icon.svg" />
+        <img class="icon" src="./icon.svg" alt="icon" />
         <div class="header-text">Let's Fork</div>
     </div>
     <div class="info">
         <div>
-            <img class="phone" src="./phone.png" />
+            <img class="phone" src="./phone.png" alt="phone" />
         </div>
         <div>
             <div>
                 <a href="https://apps.apple.com/us/app/lets-fork/id1513436174">
-                    <img class="apple" src="./app-store.svg" />
+                    <img class="apple" src="./app-store.svg" alt="app-store" />
                 </a>
             </div>
             <div>
                 <a href="https://play.google.com/store/apps/details?id=com.peterzernia.letsfork">
-                    <img class="google" src="./google-play.png" />
+                    <img class="google" src="./google-play.png" alt="play-store" />
                 </a>
             </div>
         </div>
