add og image to html

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://letsfork.app"/>
 
+    <meta property=”og:image” content=”./lets-fork.png” />
+
     <title>Let's Fork</title>
     <link rel="stylesheet" type="text/css" href="./index.css">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet"> 
