--- a/public/party/index.html
+++ b/public/party/index.html
@@ -4,7 +4,7 @@
     <script>
         var url = window.location.href;
         var id = url.substring(url.length - 6, url.length);
-        // dev url: exp://192.168.178.25:19000/+
+        // window.location.replace("exp://192.168.178.25:19000/+/party/" + id)
         window.location.replace("letsfork://party/" + id);
 
         setTimeout(function() {
