add more meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <meta name="description" content="Let's Fork makes deciding on dinner with friends easy. Swipe right on your next favorite restaurant.">
-    <meta name="keywords" content="letsfork,lets,fork,app,android,iphone,ios,swipe,right,mobile,restaurant,restaurants,dinner,food,friends,party">
-    <meta name="author" content="Peter Zernia">
-    <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://letsfork.app"/>
 
-    <meta property=”og:image” content=”./lets-fork.png” />
+    <meta name="description" content="Swipe right on your next favorite restaurant.">
+    <meta name="author" content="Peter Zernia">
+    <meta name="robots" content="index, follow" />
+    <meta name="keywords" content="letsfork,lets,fork,app,android,iphone,ios,swipe,right,mobile,restaurant,restaurants,dinner,food,friends,party">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Let's Fork">
+    <meta itemprop="description" content="Swipe right on your next favorite restaurant.">
+    <meta itemprop="image" content="./lets-fork.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="http://letsfork.app">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Let's Fork">
+    <meta property="og:description" content="Swipe right on your next favorite restaurant.">
+    <meta property="og:image" content="./lets-fork.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Let's Fork">
+    <meta name="twitter:description" content="Swipe right on your next favorite restaurant.">
+    <meta name="twitter:image" content="./lets-fork.png">
 
     <title>Let's Fork</title>
     <link rel="stylesheet" type="text/css" href="./index.css">
