--- a/public/index.html
+++ b/public/index.html
@@ -13,20 +13,20 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Let's Fork">
     <meta itemprop="description" content="Swipe right on your next favorite restaurant.">
-    <meta itemprop="image" content="./lets-fork.png">
+    <meta itemprop="image" content="https://letsfork.app/lets-fork.png">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="http://letsfork.app">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Let's Fork">
     <meta property="og:description" content="Swipe right on your next favorite restaurant.">
-    <meta property="og:image" content="./lets-fork.png">
+    <meta property="og:image" content="https://letsfork.app/lets-fork.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Let's Fork">
     <meta name="twitter:description" content="Swipe right on your next favorite restaurant.">
-    <meta name="twitter:image" content="./lets-fork.png">
+    <meta name="twitter:image" content="https://letsfork.app/lets-fork.png">
 
     <title>Let's Fork</title>
     <link rel="stylesheet" type="text/css" href="./index.css">
