--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta itemprop="image" content="https://letsfork.app/lets-fork.png">
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="http://letsfork.app">
+    <meta property="og:url" content="https://letsfork.app">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Let's Fork">
     <meta property="og:description" content="Swipe right on your next favorite restaurant.">
