--- a/public/index.html
+++ b/public/index.html
@@ -54,5 +54,8 @@
             </div>
         </div>
     </div>
+    <div class="video-container">
+        <iframe class="video" src="https://www.youtube.com/embed/yax6ekVGPnk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
