--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         </div>
     </div>
     <div class="video-container">
-        <iframe class="video" src="https://www.youtube.com/embed/yax6ekVGPnk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/477511968" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 </body>
 </html>
